--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,11 @@
+<h2>Liste des héros disponibles:</h2>
+
+<ul>
+    <li *ngFor="let hero of heroes">
+        {{ hero.id }} {{ hero.nom }}
+    </li>
+</ul>
+
 <h2>Détails du héros: <span class="elt-important">{{ hero.nom | uppercase }}</span></h2>
 
 <div><span class="identity-cat">id: </span><span class="identity-det">{{ hero.id }}</span></div>
