--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -10,3 +10,48 @@
 .identity-det {
     font-weight: bold;
 }
+
+.heroes {
+    list-style-type: none;
+    width: 10em;
+    margin: 0 0 2em 0;
+    padding: 0;
+}
+
+.heroes li {   
+    cursor: pointer;
+    margin: 0 0 0.5em 0;
+    border-radius: 4px;;
+    background-color: rgb(144, 240, 114);
+    position: relative;
+}
+
+.heroes li:hover {
+    left: 0.1em;
+}
+
+.heroes .badge {
+    display: inline-block;
+    background-color: rgb(66, 197, 55);
+    border-radius: 4px 0 0 4px;
+    margin-right: 5px;
+    padding: 0.3em 0.3em 0 0.3em;
+    height: 1.6em;
+}
+
+.heroes .badgeNom {
+    display: inline-block;
+    margin-left: 5 px;
+    padding: 0.3em 0 0 0;
+    height: 1.6em;
+}
+
+.heroes li.selected {
+    background-color: rgb(68, 148, 30);
+    color: rgb(255, 255, 255);
+}
+
+.heroes li.selected .badge {
+    background-color: rgb(32, 71, 14);/* rgb(56, 129, 151);*/
+    color: rgb(255, 255, 255);
+}
