--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,13 @@
 <script type="text/javascript">
-function computeLastModifiedDate() {
-    mois = new Array("janvier", "février", "mars",
-				"avril", "mai", "juin", "juillet",
-				"août", "septembre", "octobre",
-				"novembre", "décembre");
-    var maj = new Date(document.lastModified);
-    document.getElementById("date").innerHTML = "Date de dernière mise à jour de la page :<strong> " +
-			   maj.getDate() + " " +
-			   mois[maj.getMonth()] + " " +
-               maj.getFullYear() + "</strong>";
-}
+    
 </script>
 
 <h1>{{ title }}</h1>
 
-<body onload="computeLastModifiedDate()">
-    <div style="display:block;">
-        <p style="text-align: right;"><span id="date"></span></p>
-    </div>
+<body>
+    <!-- <div style="display:block;"> -->
+        <p id="date">{{ computeLastModifiedDate() }}</p><!-- style="text-align: right;" -->
+    <!-- </div> -->
 
     <app-heroes></app-heroes>
 </body>
