--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,19 +7,4 @@
     </li>
 </ul>
 
-<div *ngIf="selectedHero">
-    <h2>Détails du héros sélectionné : <span class="elt-important">{{ selectedHero.nom | uppercase }}</span></h2>
-    <div>
-        <span class="identity-cat">id: </span><span class="identity-det">{{ selectedHero.id }}</span>
-    </div>
-    <div>
-        <span class="identity-cat">nom: </span><span class="identity-det">{{ selectedHero.nom }}</span>
-    </div>
-
-    <div>
-        <!-- Champs de modification -->
-        <label>Nom du héros:
-            <input [(ngModel)]="selectedHero.nom" placeholder="nom du héros"/>
-        </label>
-    </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
