Ajout: Création du service message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,8 @@
 <h1>{{ title }}</h1>
 
 <body>
-    <!-- <div style="display:block;"> -->
-        <p id="date">{{ computeLastModifiedDate() }}</p><!-- style="text-align: right;" -->
-    <!-- </div> -->
+        <p id="date" style="text-align: right;">{{ computeLastModifiedDate() }}</p>
 
     <app-heroes></app-heroes>
+    <app-messages></app-messages>
 </body>
