--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <nav>
 <ul>
     <li><a class="nav-bar" routerLink="/">Accueil</a></li>
-    <li><a class="nav-bar" routerLink="/heroes">Heroes</a></li>
+    <li><a class="nav-bar" routerLink="/heroes">Héros</a></li>
 </ul>
 </nav>
 <body>
