--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <h1>{{ title }}</h1>
 <nav>
 <ul>
-    <li><a class="nav-bar" routerLink="/">Accueil</a></li>
+    <li><a class="nav-bar" routerLink="/dashboard">Dashboard</a></li>
     <li><a class="nav-bar" routerLink="/heroes">Héros</a></li>
 </ul>
 </nav>
