Ajout: Bouton de vidage de message + suite routage

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -13,4 +13,5 @@
             <input [(ngModel)]="hero.nom" placeholder="nom du héros"/>
         </label>
     </div>
+    <button (click)="goBack()">Précédent</button>
 </div>
